@@ -1,9 +1,7 @@
 name    = Plack-Session-Store-MongoDB
-version = 0.4
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
+copyright_year   = 2010
 
-[@Filter]
--bundle = @IDOPEREL
--remove = LatestPrereqs
+[@IDOPEREL]
