@@ -1,6 +1,9 @@
 Revision history for Plack-Session-Store-MongoDB
 
 {{$NEXT}}
+	- Now allows passing a MongoDB::Connection object instead of having
+	  the module creating one by itself (older behavior still available
+	  though)
 
 0.3       2011-02-02 01:10:02 Asia/Jerusalem
 	- Now allows passing options to MongoDB::Connection's new() method
